# Galaxy-rs

./: .gitignore  Cargo.toml  README.md
src/: barnes_hut.rs  body.rs  lib.rs  scenario.rs  screen.rs
src/scenario/: collision.rs  collision2.rs  collision_barnes_hut.rs  sun_earth_moon.rs  three_body.rs
src/screen/: egui_screen.rs  terminal_screen.rs  text_render.rs
