[package]
name = "Galaxy-rs"
version = "0.0.1"
authors = ["Anonymous", "DinoZ1729"]
edition = "2018"
description = "rust rewrite of three body ascii rendering project originally hosted by DinoZ1729"
license = "GPL-3.0"

[dependencies]
terminal_size = "0.1.17"
nalgebra = "0.27.1"
rand = "0.8.4"
egui = "0.13.1"
eframe = "0.13.1"

[[bin]]
name = "sun_earth_moon"
path = "src/bin/Sun-Earth-Moon.rs"

[[bin]]
name = "collision"
path = "src/bin/Collision.rs"

[[bin]]
name = "threebody"
path = "src/bin/ThreeBody.rs"

[[bin]]
name = "egui_all"
path = "src/bin/egui_all.rs"

[lib]
name = "galaxyy"
path = "src/lib.rs"
